# HaxBotJrJr

./: .gitignore  Cargo.toml  README.md  sqlx-data.json
crates/config/: Cargo.toml
crates/config/src/: lib.rs  tag.rs  utils.rs
crates/event/: Cargo.toml
crates/event/src/: lib.rs  timer.rs
crates/memberdb/: Cargo.toml
crates/memberdb/migrations/: 20220607165330_initial_migration.sql  20220913183638_average_online.sql
crates/memberdb/src/: discord.rs  error.rs  events.rs  guild.rs  lib.rs  loops.rs  member.rs  query.rs  query_builder.rs  table.rs  utils.rs  voice_tracker.rs  wynn.rs
crates/memberdb/src/api/: fetch.rs  mod.rs  query.rs  table.rs  update.rs
crates/memberdb/src/model/: db.rs  discord.rs  guild.rs  member.rs  mod.rs  wynn.rs
crates/msgtool/: Cargo.toml
crates/msgtool/src/: interact.rs  lib.rs  pager.rs  parser.rs  profile.rs  table.rs
crates/util/: Cargo.toml
crates/util/src/: discord.rs  imp.rs  lib.rs  string.rs  tri.rs
crates/wynn/: Cargo.toml
crates/wynn/src/: cache.rs  error.rs  events.rs  lib.rs  loops.rs  model.rs  utils.rs
src/: checks.rs  data.rs  handler.rs  hooks.rs  lib.rs  logging.rs  loops.rs  main.rs
src/commands/: config.rs  member.rs  member_manage.rs  member_stat.rs  meta.rs  mod.rs  nick.rs  owner.rs  staff_util.rs  test.rs  wynn.rs
src/util/: arg.rs  db.rs  discord.rs  macros.rs  mod.rs
