[package]
name = "haxbotjr"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
dotenv = "0.15"
chrono = "0.4"
tracing = "0.1.23"
tracing-appender = "0.2.2"
anyhow = "1.0"
memberdb = {path = "./crates/memberdb"}
util = {path = "./crates/util"}
wynn = {path = "./crates/wynn"}
event = {path = "./crates/event"}
msgtool = {path = "./crates/msgtool"}
config = {path = "./crates/config"}

[dependencies.tracing-subscriber]
version = "0.3.14"
features = ["env-filter"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlite", "offline"]

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "framework", "standard_framework", "rustls_backend", "model",
            "cache", "http", "collector"]
