[package]
name = "memberdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.23"
anyhow = "1.0"
util = {path = "../util"}
event = {path = "../event"}
config = {path = "../config"}

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlite", "offline"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
