[package]
name = "msgtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memberdb = {path = "../memberdb"}
util = {path = "../util"}
wynn = {path = "../wynn"}
anyhow = "1.0"

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies.reqwest]
version = "0.11"
