[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.23"
anyhow = "1.0"
num-format = "0.4.0"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["framework", "standard_framework"]
