[package]
name = "wynn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tracing = "0.1.23"
anyhow = "1.0"
event = {path = "../event"}
util = {path = "../util"}

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "time"]

[dependencies.backoff]
version = "0.4.0"
features = ["tokio"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
